<resources>
    <string name="app_name">SQLiteApp</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="marks">Marks</string>
    <string name="add_data">Add Data</string>
    <string name="view_all">View All</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="id">id</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="ver_dados">Ver Dados</string>
    <string name="add">Add</string>
    <string name="atualizar">Atualizar</string>
    <string name="apagar_dados">Apagar Dados</string>
</resources>
