<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:text="@string/nome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView_nome"
        android:layout_toEndOf="@id/textView_nome"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView_sobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_nome"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="16dp"
        android:text="@string/sobrenome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_sobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_sobrenome"
        android:layout_toEndOf="@+id/textView_sobrenome"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_sobrenome"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="16dp"
        android:text="@string/id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView_id"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@id/textView_sobrenome"
        android:autofillHints=""
        android:inputType="text"
        android:labelFor="@id/textView_id"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <LinearLayout
        android:id="@+id/primeiro_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_id"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add_dado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/add"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_ver_dados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/ver_dados"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/segundo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/primeiro_layout"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_atualizar_dados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/atualizar"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/apagar_dados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/apagar_dados"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</RelativeLayout>